--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,5 @@
-<h1>WELCOME</h1>
+<h3>HEYY! Welcome to LiveInterior</h3>
+	<p><!--<img class="align-left" src="http://placehold.it/180x150/4D99E0/ffffff.png&text=180x150" width="180" height="150" />--->
+        In today's world, it seems as though there truly is an app for everything, and learning home design is no exception. Looking for the perfect vintage chair? Want to envision what a new paint color would look like in your space, without getting out the rollers? Need a floor plan for your home? Whip out your smartphone. From learning how to shop and color planning to measuring and arranging, there's an app for learning nearly every step of the design process. Now you really have no excuse to put off that renovation.</p>
+<a class="button" href="/users/signup">Sign Up</a>
+<p>Signup to register for the free classes and courses.</p>
