--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -21,10 +21,7 @@
 	
 <div class="col_12">
 	<div class="col_9">
-	<h3>HEYY! Welcome to LiveInterior</h3>
-	<p><!--<img class="align-left" src="http://placehold.it/180x150/4D99E0/ffffff.png&text=180x150" width="180" height="150" />--->
-        In today's world, it seems as though there truly is an app for everything, and learning home design is no exception. Looking for the perfect vintage chair? Want to envision what a new paint color would look like in your space, without getting out the rollers? Need a floor plan for your home? Whip out your smartphone. From learning how to shop and color planning to measuring and arranging, there's an app for learning nearly every step of the design process. Now you really have no excuse to put off that renovation.</p>
-
+	{{{body}}}
 	<!----<p>El illum dolore eu <span class="icon" data-icon="2"></span> feugiat nulla facilisis at vero eros et accumsan et iusto odio 
 	dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam 
 	liber tempor cum soluta nobis eleifend <code>&lt;h1&gt;Sample Code&lt;/h1&gt;</code> option 
@@ -40,14 +37,7 @@
 	</div>
 	
 	<div class="col_3">
-    <h5>Learner & Educator Login</h5>
-    <form>
-        <label>Username: </label>
-        <input type="text" name="username">
-        <label>Password: </label>
-        <input type="password" name="password">
-        <input class="button" type="submit" value="submit">
-    </form>
+    {{>login}}
 	<!--<ul class="icons">
 	<li><i class="fa fa-li fa-check"></i> </li>
 	<li><i class="fa fa-li fa-check"></i> </li>
@@ -67,25 +57,7 @@
 	
 	<hr />
 	
-	<div class="col_4">
-	<h4>Styling and Arranging</h4>
-	<p>In this course you will learn the elements and principles of design, how to use the flowers and foliage available to you in your area, and the mechanics of arranging flowers in vases, in floral foam arrangements, and as hand-held bouquets.</p>
-    <a class="button" href="#">View Class</a> 
-	</div>
-	
-	<div class="col_4">
-	<h4>The <i>7 Elements</i> of Interior Designing</h4>
-	<p>When thinking about interior design, words like creativity and flair immediately spring to mind – but
-        many would be surprised to find there is a degree of science involved. The interior design elements include space, line, forms, light, colour, texture and pattern.
-        </p>
-    <a class="button" href="#">View Class</a>
-	</div>
-	
-	<div class="col_4">
-	<h4>Importance of Texture</h4>
-	<p>You know how sometimes you can just look at a room and know that something is missing? All the components of a complete design are there – color scheme, furniture, décor items – but the entire room just feels a little flat. </p>
-    <a class="button" href="#">View Class</a>
-	</div>
+	{{>classes}}
 	
 	
 </div>
