--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -6,47 +6,47 @@
             <option value="student">Student</option>
             <option value="instructor">Instructor</option>
         </select>
-    </div>
+    </div><br/>
     <div>
         <label>First Name: </label>
         <input type="text" name="first_name" value="{{first_name}}" required>
-    </div>
+    </div><br/>
     <div>
         <label>Last Name: </label>
         <input type="text" name="last_name" value="{{last_name}}" required>
-    </div>
+    </div><br/>
     <div>
         <label>Street Address: </label>
         <input type="text" name="street_address" value="{{street_address}}" required>
-    </div>
+    </div><br/>
     <div>
         <label>City: </label>
         <input type="text" name="city" value="{{city}}" required>
-    </div>
+    </div><br/>
     <div>
         <label>State: </label>
         <input type="text" name="state" value="{{state}}" required>
-    </div>
+    </div><br/>
     <div>
         <label>Zip: </label>
         <input type="text" name="zip" value="{{zip}}" required>
-    </div>
+    </div><br/>
     <div>
         <label>Email Address: </label>
         <input type="text" name="email" value="{{email}}" required>
-    </div>
+    </div><br/>
      <div>
         <label>Username: </label>
         <input type="text" name="username" value="{{username}}" required>
-    </div>
+    </div><br/>
      <div>
         <label>Password: </label>
         <input type="password" name="password" value="{{password}}" required>
-    </div>
+    </div><br/>
      <div>
         <label>Confirm Password: </label>
         <input type="password" name="password2" value="{{password2}}" required>
-    </div>
+    </div><br/>
     <div>
         <input type="submit" value="Signup">
     </div>
