--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -3,6 +3,6 @@
         <label>Username: </label>
         <input type="text" name="username">
         <label>Password: </label>
-        <input type="password" name="password">
+        <input type="password" name="password"><br>
         <input class="button" type="submit" value="submit">
     </form>
