--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,4 +1,12 @@
 <h2>Create Your Account</h2>
+{{#if errors}}
+    {{#each errors}}
+        <div class="notice error"><i class="icon-remove-sign icon-large"></i>
+            {{msg}}
+            <a href = "#close" class="icon-remove"></a>
+        </div>
+    {{/each}}
+{{/if}}        
 <form id="regForm" method="post" action="/users/register">
     <div>
         <label>Account Type</label>
@@ -9,43 +17,43 @@
     </div><br/>
     <div>
         <label>First Name: </label>
-        <input type="text" name="first_name" value="{{first_name}}" required>
+        <input type="text" name="first_name" value="{{first_name}}" >
     </div><br/>
     <div>
         <label>Last Name: </label>
-        <input type="text" name="last_name" value="{{last_name}}" required>
+        <input type="text" name="last_name" value="{{last_name}}" >
     </div><br/>
     <div>
         <label>Street Address: </label>
-        <input type="text" name="street_address" value="{{street_address}}" required>
+        <input type="text" name="street_address" value="{{street_address}}" >
     </div><br/>
     <div>
         <label>City: </label>
-        <input type="text" name="city" value="{{city}}" required>
+        <input type="text" name="city" value="{{city}}" >
     </div><br/>
     <div>
         <label>State: </label>
-        <input type="text" name="state" value="{{state}}" required>
+        <input type="text" name="state" value="{{state}}" >
     </div><br/>
     <div>
         <label>Zip: </label>
-        <input type="text" name="zip" value="{{zip}}" required>
+        <input type="text" name="zip" value="{{zip}}" >
     </div><br/>
     <div>
         <label>Email Address: </label>
-        <input type="text" name="email" value="{{email}}" required>
+        <input type="text" name="email" value="{{email}}" >
     </div><br/>
      <div>
         <label>Username: </label>
-        <input type="text" name="username" value="{{username}}" required>
+        <input type="text" name="username" value="{{username}}" >
     </div><br/>
      <div>
         <label>Password: </label>
-        <input type="password" name="password" value="{{password}}" required>
+        <input type="password" name="password" value="{{password}}" >
     </div><br/>
      <div>
         <label>Confirm Password: </label>
-        <input type="password" name="password2" value="{{password2}}" required>
+        <input type="password" name="password2" value="{{password2}}" >
     </div><br/>
     <div>
         <input type="submit" value="Signup">
